force-app/main/default/objects/MasterValues__mdt/MasterValues__mdt.object-meta.xml
<CustomObject>
    <label>Master Values</label>
    <pluralLabel>Master Values</pluralLabel>
</CustomObject>