force-app/main/default/objects/MasterValues__mdt/fields/FieldMappedTo__c.field-meta.xml
<CustomField>
    <fullName>FieldMappedTo__c</fullName>
    <label>Field Mapped To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>