force-app/main/default/objects/MasterValues__mdt/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Parent Position</description>
    <label>Position</label>
    <referenceTo>Position__mdt</referenceTo>
    <relationshipLabel>Master Values</relationshipLabel>
    <relationshipName>MasterValues</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>