force-app/main/default/objects/MasterValues__mdt/fields/PositionFieldValue__c.field-meta.xml
<CustomField>
    <fullName>PositionFieldValue__c</fullName>
    <description>Parent Position Field Value</description>
    <label>Position Field Value</label>
    <referenceTo>PositionFieldValues__mdt</referenceTo>
    <relationshipLabel>Master Values</relationshipLabel>
    <relationshipName>MasterValues</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>